--- a/my-app/ec2.yaml
+++ b/my-app/ec2.yaml
@@ -1,5 +1,5 @@
 #ec2 crossplane with ubuntu 20.04, script to install nfs server, open port 2049
-apiVersion: ec2.aws.crossplane.io/v1beta1
+apiVersion: ec2.aws.upbound.io/v1beta1
 kind: Instances
 metadata:
   name: nfs-server
